[gd_scene load_steps=6 format=2]

[ext_resource path="res://test_chars/worm_body.gd" type="Script" id=1]
[ext_resource path="res://test_chars/textures/test_body.png" type="Texture" id=2]
[ext_resource path="res://test_chars/gun_test.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 66.1202

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 34.5313
height = 44.2844

[node name="worm_body" type="KinematicBody2D"]
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )

[node name="delete_are" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="delete_are"]
shape = SubResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
rotation = 1.5708
z_index = -1
shape = SubResource( 2 )

[node name="skin" type="Node2D" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="skin"]
texture = ExtResource( 2 )

[node name="APosI" type="Position2D" parent="."]
position = Vector2( 60, 0 )

[node name="APosO" type="Position2D" parent="."]
position = Vector2( -60, 0 )

[node name="gun_body" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.7, 0.7 )
z_index = 1

[connection signal="input_event" from="delete_are" to="." method="_on_Area2D_input_event"]
